# zonelens

./: .env.sample  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_GENERATION_GUIDELINES.md  LESSONS_LEARNT.md  LICENSE  PLAN.md  PRIVACY.md  README.md  docker-compose.yml
.github/workflows/: backend-release-build.yml  extension-release-build.yml  frontend-release-build.yml  pre-commit.yml  tests.yml
backend/: .coveragerc  Dockerfile  Dockerfile.dev  constraints.txt  manage.py  pyproject.toml
backend/api/: admin.py  apps.py  gunicorn.conf.py  hr_processing.py  logging.py  models.py  scheduler.py  serializers.py  strava_client.py  strava_http_client.py  tests.py  types.py  urls.py  utils.py  views.py  worker.py
backend/api/migrations/: 0001_initial.py  0004_alter_zonesummary_zone_times_seconds.py  0005_activityprocessingqueue.py  0006_add_existing_users_to_processing_queue.py  0007_activityprocessingqueue_num_processed_and_more.py  0008_populate_activity_processing_queue.py
backend/api/static/css/: buttons.css
backend/api/templates/: index.html
backend/api/templates/api/: auth_callback.html  base.html  changelog.html  hr_zone_display.html
backend/strava_zones_backend/: settings.py  urls.py
backend/templates/: index.html
backend/tools/: install_python.sh  process_activities.sh  put_hr_zones_to_db.sh  run_https_server.sh
data/: example_summary.json
extension/: background.js  content.js  manifest.json  popup.css  popup.html  popup.js  styles.css
frontend/: content.js  manifest.json  popup.css  popup.html  popup.js  styles.css
strava_zones_backend/: Dockerfile.dev  constraints.txt  pyproject.toml
strava_zones_backend/api/: apps.py  hr_processing.py  logging.py  models.py  serializers.py  strava_client.py  tests.py  urls.py  utils.py  views.py  worker.py
strava_zones_backend/api/migrations/: 0002_stravauser_user.py  0003_alter_zonesummary_options_and_more.py
strava_zones_backend/strava_zones_backend/: asgi.py  settings.py  urls.py  wsgi.py
strava_zones_backend/templates/: index.html
